--- a/exercises/templates/home.html
+++ b/exercises/templates/home.html
@@ -5,6 +5,6 @@
 	<link rel="stylesheet" type="text/css" href="">
 </head>
 <body>
-    <h1>Welcome to the home page!</h1>
+    <h1>Welcome to the home page! {{ s }}</h1>
 </body>
 </html>
