--- a/exercises/templates/home.html
+++ b/exercises/templates/home.html
@@ -5,6 +5,10 @@
 	<link rel="stylesheet" type="text/css" href="">
 </head>
 <body>
-    <h1>Welcome to the home page! {{ s }}</h1>
+    <h1>Welcome to the home page!</h1>
+    <h1> this is the student page {{id}} </h1>
+
+    <a href="{{ url_for('home') }}">
+    back to home </a>
 </body>
 </html>
